# mos

./: AGENTS.md  README.md  pyproject.toml
docs/plans/: 2026-06-30-background-task-management-design.md  2026-06-30-background-task-management-plan.md
src/mos/: __init__.py
src/mos/cli/: init.py  mos.py  plugin.py  task.py
src/mos/core/: plugin.py
src/mos/core/task/: __init__.py  event_bus.py  manager.py  process_manager.py  registry.py  scheduler.py  types.py
src/mos/core/task/storage/: __init__.py  base.py  file.py
test/: test_event_bus.py  test_integration.py  test_plugin_task_integration.py  test_process_manager.py  test_scheduler.py  test_storage_base.py  test_storage_file.py  test_task_manager.py  test_task_registry.py  test_task_types.py
